2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/AddinPackage.cs: Delete subdirectories when
	  uninstalling.
	* Mono.Addins.Setup/AddinStore.cs: Use a more informative uninstall message.
	* Mono.Addins.Setup/RepositoryRegistry.cs: Fix a nullref. Improved error
	  reporting.

2007-12-15  Lluis Sanchez Gual <lluis@novell.com> 

	* mono-addins-setup.pc.in: Update assembly paths.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/SetupTool.cs: Typo fix.
	* Makefile.am: Generate and install policy files for old Mono.Addins
	  versions.

2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/AddinPackage.cs: When checking if an add-in is
	  installed, don't provide the version number. This will return whatever
	  version is installed.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* mono-addins-setup.pc.in: Fix dependencies.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.mdp: Updated.
	* Mono.Addins.Setup/SetupTool.cs: Added initial support for generating
	  add-in documentation as XML.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.mdp: Update paths.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Get ready for 0.3 release.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/RepositoryRegistry.cs: Make sure RegisterRepository
	  always returns a reference to the new repo.

2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.mdp: Minor fix.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Mono.Addins.Setup.mdp, Makefile.am: Sign the
	  assembly.
	* Mono.Addins.Setup/ConsoleAddinInstaller.cs: New IAddinInstaller
	  implementation.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.ProgressMonitoring/ConsoleProgressMonitor.cs,
	  Mono.Addins.Setup.ProgressMonitoring/ProgressStatusMonitor.cs,