@@ -1,3 +1,7 @@
+2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Addins.Setup/RepositoryRegistry.cs: Don't break the api.
+
 2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Addins.Setup/AddinPackage.cs: Delete subdirectories when
